ClickManaita Customを追加しました

--- a/1.12.2/main/resources/assets/clickmanaita/lang/en_US.lang
+++ b/1.12.2/main/resources/assets/clickmanaita/lang/en_US.lang
@@ -12,6 +12,8 @@ item.ClickManaita Iron Pickaxe.name=ClickManaita Iron Pickaxe
 item.ClickManaita Gold Pickaxe.name=ClickManaita Gold Pickaxe
 item.ClickManaita Diamond Pickaxe.name=ClickManaita Diamond Pickaxe
 
+item.ClickManaita Custom.name=ClickManaita Custom
+
 advancements.clickmanaita.root.title=ClickManaita Start
 advancements.clickmanaita.root.desc=×2
 advancements.clickmanaita_stone.title=Stone
@@ -24,6 +26,10 @@ advancements.clickmanaita_emerald.title=Emerald
 advancements.clickmanaita_emerald.desc=×32
 advancements.clickmanaita_diamond.title=Diamond
 advancements.clickmanaita_diamond.desc=×64
+
+advancements.clickmanaita_diamond.title=Custom Drop
+advancements.clickmanaita_diamond.desc=Please change the number of numbers you want to increase the name on the anvil.
+
 
 tile.ClickManaitaBlock Wood.name=ClickManaitaBlock Wood
 tile.ClickManaitaBlock Stone.name=ClickManaitaBlock Stone
