--- a/1.12.2/main/resources/assets/clickmanaita/lang/en_US.lang
+++ b/1.12.2/main/resources/assets/clickmanaita/lang/en_US.lang
@@ -27,8 +27,8 @@ advancements.clickmanaita_emerald.desc=×32
 advancements.clickmanaita_diamond.title=Diamond
 advancements.clickmanaita_diamond.desc=×64
 
-advancements.clickmanaita_diamond.title=Custom Drop
-advancements.clickmanaita_diamond.desc=Please change the number of numbers you want to increase the name on the anvil.
+advancements.clickmanaita_custom.title=Custom Drop
+advancements.clickmanaita_custom.desc=Please change the number of numbers you want to increase the name on the anvil.
 
 
 tile.ClickManaitaBlock Wood.name=ClickManaitaBlock Wood
