--- a/1.12.2/main/resources/assets/clickmanaita/lang/ja_JP.lang
+++ b/1.12.2/main/resources/assets/clickmanaita/lang/ja_JP.lang
@@ -25,8 +25,8 @@ advancements.clickmanaita_emerald.desc=３２倍化
 advancements.clickmanaita_diamond.title=ダイヤモンド
 advancements.clickmanaita_diamond.desc=６４倍化
 
-advancements.clickmanaita_diamond.title=カスタム版
-advancements.clickmanaita_diamond.desc=金床で名前を増やしたい量の数字に変更してください。
+advancements.clickmanaita_custom.title=カスタム版
+advancements.clickmanaita_custom.desc=金床で名前を増やしたい量の数字に変更してください。
 
 tile.ClickManaitaBlock Wood.name=クリックまな板ブロック 木製
 tile.ClickManaitaBlock Stone.name=クリックまな板ブロック 石製
